<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".MainActivity" >

    <!-- 1. プロフィール画像(ic_launcher)と、それを囲う四角形の枠、その下に プロフィール と書かれた文字 -->

    <RelativeLayout
        android:id="@+id/profile_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/droid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/frame"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/droid"
            android:text="@string/profile" />
    </RelativeLayout>

    <!-- 2. 1. の右側の上半分に、ニックネームの表示と、そのさらに右端に設定アイコン -->

    <RelativeLayout
        android:id="@+id/name_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/profile_area"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/profile_area" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/setting_img"
            android:text="@string/nickname"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/setting_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#E8E8E8"
            android:contentDescription="@string/action_settings"
            android:src="@android:drawable/ic_menu_manage" />
    </RelativeLayout>
    <!-- 3. 1. の右側の下半分に、電話ボタン、メール送信ボタン、共有ボタンの 3 つを均等割付 -->

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_area"
        android:layout_alignRight="@+id/name_area"
        android:layout_below="@+id/name_area"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_call" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_send" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_share" />
    </LinearLayout>
    <!-- 4. 2. と 3. の間に分割線 -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/name_area"
        android:layout_alignRight="@+id/name_area"
        android:layout_below="@+id/name_area"
        android:background="#393939" />

    <!-- 条件: 3. 以外では LinearLayout を使ってはならない -->
    <!-- Hint: 1. 画像の表示には、android:src="@drawable/ic_launcher" 属性を使います -->
    <!-- Hint: 2. 画像を表示しながら、ボタンとして機能させる特別なボタンの View があります -->
    <!-- Hint: 3. 区切り線を引く専用の UI はありません。背景色を android:background="#393939" にして、区切り線ぽく扱う工夫が必要です -->
    <!-- Hint: 4. 均等割付するボタンの画像は、左から android:src="@android:drawable/ic_menu_call", android:src="@android:drawable/ic_menu_send", android:src="@android:drawable/ic_menu_share" です -->
    <!-- TODO: 上記のまとまりの下に、幅 1 dp の区切り線を引く -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_area"
        android:layout_marginTop="5dp"
        android:background="#393939" />

    <!-- TODO: 左側から順に、下記の View を配置していき、そのまとまりを画面下部に揃える -->
    <!-- 1. ic_launcher のアイコンと、その下に メニュー の文字を表示し、アイコンの右肩に 30 と書かれたバッチを表示するボタン -->

    <RelativeLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <FrameLayout
            android:id="@+id/badge_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_state_list"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_launcher"
                android:gravity="center_horizontal"
                android:text="@string/menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/badge"
                android:text="@string/badge_num" />
        </FrameLayout>

        <!-- 2. 幅 1dp の 縦の区切り線 -->

        <ImageView
            android:id="@+id/button_separator1"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/badge_menu_button"
            android:layout_alignTop="@+id/badge_menu_button"
            android:layout_toRightOf="@+id/badge_menu_button"
            android:background="#393939" />
        <!-- 3. ic_launcher のアイコンと、その右に つぶやきを投稿 の文字を表示しているボタン -->

        <FrameLayout
            android:id="@+id/tweet_button_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button_separator1"
            android:layout_alignTop="@+id/button_separator1"
            android:layout_toLeftOf="@+id/button_separator2"
            android:layout_toRightOf="@+id/button_separator1"
            android:background="@drawable/button_state_list"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="center_vertical"
                android:text="@string/tweet" />
        </FrameLayout>
        <!-- 4. 幅 1dp の 縦の区切り線 -->

        <ImageView
            android:id="@+id/button_separator2"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/badge_menu_button"
            android:layout_alignTop="@+id/badge_menu_button"
            android:layout_toLeftOf="@+id/recent_button"
            android:background="#393939" />

        <!-- 5. ic_launcher のアイコンと、その下に 最近 の文字を表示しているボタン -->

        <RelativeLayout
            android:id="@+id/recent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/button_separator2"
            android:background="@drawable/button_state_list"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableTop="@drawable/ic_launcher"
                android:gravity="center_horizontal"
                android:text="@string/recent" />
        </RelativeLayout>
    </RelativeLayout>
    <!-- 条件: LinearLayout は一切使用しない -->
    <!-- Hint: 1. ボタンですが Button は使いません -->
    <!-- Hint: 2. ボタン用の背景は android:background="@drawable/button_state_list" にします -->
    <!-- Hint: 3. バッチ用の背景は android:background="@drawable/badge" にします -->
    <!-- Hint: 4. TextView には、文字の隣に drawable を表示する属性があります -->


    <!-- TODO: 上記の View の上に、お知らせを表示する View を配置する -->
    <!-- Hint: 1. お知らせを表示する View の背景は android:background="@drawable/notify_button_state_list" にします -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_menu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/notify_button_state_list"
        android:padding="10dp" >
		<TextView 
		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/badge_num"
            android:textColor="#FFFFFF" 
            android:paddingRight="5dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_message"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>
    </LinearLayout>

</RelativeLayout>